Ajouter la methode supprimer Or
